Fix comment toggling when all lines in selection aren't commented

Old behaviour:

When all lines in the selection aren't commented, toggling would
uncomment the commented lines in selection and stop. Pressing toggle
again would comment everything.

New behaviour:

If all lines are commented => uncomment all on toggle
If some lines are commented => comment all (recommenting commented lines)

The new behaviour is consistent with rest of the editors
(QtCreator / VSCode)

BUG: 426981